# ps-schedule

./: .gitignore  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
docs/: base.md
ps_schedule/: __init__.py  __main__.py  core.py  models.py
