[project]
name = "ps-schedule"
version = "1.1.0"
description = "Бібліотека-парсер для \"ПС-Розклад v4.0\" від ПП \"Політек-Софт\"."
authors = [{name = "olekstsu"}]
requires-python = ">=3.9"
dynamic = ["optional-dependencies"]
dependencies = [
    "beautifulsoup4>=4.14.2",
    "requests>=2.32.5",
    "html5lib>=1.1"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
optional-dependencies = {dev = {file = ["dev-requirements.txt"]}} # add packages for development in the dev-requirements.txt file

[project.scripts]
# TODO: add your CLI entry points here




